--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "my_todolist",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "engines": {
+    "node": "16.13.0"
+  },
+    "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
