--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "engines": {
     "node": "16.13.0"
   },
-    "dependencies": {
+  "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.2.1",
