--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
+    "@types/storybook-react-router": "^1.0.1",
     "@types/uuid": "^8.3.3",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
@@ -39,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -p 9009 -s public --no-dll",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
@@ -87,6 +88,7 @@
     "jest-puppeteer": "^6.1.0",
     "puppeteer": "^13.5.2",
     "start-server-and-test": "^1.14.0",
+    "storybook-react-router": "^1.0.8",
     "webpack": "^5.72.0"
   }
 }
