--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my_todolist",
+  "homepage": "https://sveta-confeta.github.io/my-todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sveta-confeta.github.io/myTodoList",
   "engines": {
     "node": "16.13.0"
   },
