--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_todolist",
+  "name": "my-todolist",
   "homepage": "https://sveta-confeta.github.io/my-todolist",
   "version": "0.1.0",
   "private": true,
