auth reducer on Redux-Toolkit

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-todolist",
-  "homepage": "https://sveta-confeta.github.io/my-todolist/",
+  "homepage": "https://sveta-confeta.github.io/my-todolist",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "engines": {
     "node": "16.13.0"
   },
